# phuquocdog-node

./: .gitignore  README.md  customSpec.json  customSpecRaw.json
docker/: Dockerfile  build.sh
docs/: Multi-Node-Testnet.md  Node.md  refer-blog.md
node/: Cargo.toml
node/res/: phuquocdog.json  phuquocdoge.json
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/currency/: Cargo.toml
pallets/currency/src/: lib.rs
pallets/lockable-currency/: Cargo.toml
pallets/lockable-currency/src/: benchmarking.rs  lib.rs.back
pallets/posts/: Cargo.toml
pallets/posts/rpc/: Cargo.toml
pallets/posts/rpc/runtime-api/: Cargo.toml
pallets/posts/rpc/runtime-api/src/: lib.rs
pallets/posts/rpc/src/: lib.rs
pallets/posts/src/: functions.rs  lib.rs  post_types.rs  reaction_types.rs  rpc.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: assets.rs  lib.rs
resources/: octopus-mainnet.json
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
runtime/src/weights/: frame_system.rs  mod.rs  pallet_staking.rs
scripts/: prepare-test-net.sh
