[package]
authors = ['Substrate DevHub <https://github.com/phuquocdog>']
edition = '2018'
homepage = 'https://phuquoc.dog'
license = 'Unlicense'
name = 'phuquocdog-runtime'
repository = 'https://github.com/phuquocdog/node'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dependencies]
# external dependencies
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.3", optional = true }
static_assertions = "1.1.0"
log = { version = "0.4.14", default-features = false }
smallvec = "1.6.1"

# Substrate dependencies
# frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
# frame-executive = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
# frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
# frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
# frame-system-benchmarking = {default-features = false, optional = true, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
# frame-system-rpc-runtime-api = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-executive  = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-system  = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
pallet-session-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }

pallet-authorship = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-babe = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-offences = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-multisig = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-staking-reward-curve = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-utility = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-treasury = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-collective = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-elections-phragmen = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-membership = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-scheduler = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-bounties = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-indices = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-identity = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-proxy = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-tips = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-recovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-election-provider-multi-phase = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

#sp
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

#added
sp-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-npos-elections = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-election-provider-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

pallet-nicks = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }

# local dependencies
pallet-template = {default-features = false, version = '3.0.0', path = '../pallets/template'}
# pallet-lockable-currency = {default-features = false, version = '3.0.0', path = '../pallets/lockable-currency'}


[features]
default = ["std"]
std = [
    'codec/std',
    'log/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-offences/std',
    'pallet-session/std',
    'pallet-staking/std',
    'pallet-authority-discovery/std',
    'pallet-multisig/std',
    'pallet-sudo/std',
    'pallet-indices/std',
    'pallet-identity/std',
    'pallet-proxy/std',
    'pallet-recovery/std',
    'pallet-utility/std',
    'pallet-bounties/std',
    'pallet-tips/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-treasury/std',
    'pallet-collective/std',
    'pallet-elections-phragmen/std',
    'frame-election-provider-support/std',
    'pallet-membership/std',
    'pallet-scheduler/std',
    'pallet-election-provider-multi-phase/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-npos-elections/std',

]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "hex-literal",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-election-provider-support/runtime-benchmarks"
]
